--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Detect package manager
         id: detect-package-manager
         run: |
-          ls -la "${{ github.workspace }}/lifegamecownay"
-          if [ -f "${{ github.workspace }}/lifegamecownay/package.json" ]; then
+          ls -la "${{ github.workspace }}/lifegameconway"
+          if [ -f "${{ github.workspace }}/lifegameconway/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
