--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,27 +27,26 @@ jobs:
         with:
           node-version: "20"
           cache: npm
-
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
-            lifegamecownay/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('lifegamecownay/package-lock.json') }}-${{ hashFiles('lifegamecownay/**/*.[jt]s', 'lifegamecownay/**/*.[jt]sx') }}
+            lifegameconway/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('lifegameconway/package-lock.json') }}-${{ hashFiles('lifegameconway/**/*.[jt]s', 'lifegameconway/**/*.[jt]sx') }}
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('lifegamecownay/package-lock.json') }}-
-
+            ${{ runner.os }}-nextjs-${{ hashFiles('lifegameconway/package-lock.json') }}-
+      
       - name: Install dependencies
         run: npm ci
-        working-directory: lifegamecownay
-
+        working-directory: lifegameconway
+      
       - name: Build with Next.js
         run: npx --no-install next build
-        working-directory: lifegamecownay
-
+        working-directory: lifegameconway
+      
       - name: Export static site
         run: npx --no-install next export -o ../out
-        working-directory: lifegamecownay
+        working-directory: lifegameconway
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
