--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,4 +1,3 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
 name: Deploy Next.js site to Pages
 
 on:
@@ -27,6 +26,8 @@ jobs:
         with:
           node-version: "20"
           cache: npm
+          cache-dependency-path: lifegamecownay/package-lock.json
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -35,15 +36,15 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('lifegamecownay/package-lock.json') }}-${{ hashFiles('lifegamecownay/**/*.[jt]s', 'lifegamecownay/**/*.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('lifegamecownay/package-lock.json') }}-
-      
+
       - name: Install dependencies
         run: npm ci
         working-directory: lifegamecownay
-      
+
       - name: Build with Next.js
         run: npx --no-install next build
         working-directory: lifegamecownay
-      
+
       - name: Export static site
         run: npx --no-install next export -o ../out
         working-directory: lifegamecownay
